[cleanup] Fix deprecation warning about usage of Class.newInstance()
Signed-off-by: Pierre-Charles David <pierre-charles.david@obeo.fr>